--- a/Resources/views/Category/index.html.twig
+++ b/Resources/views/Category/index.html.twig
@@ -13,41 +13,62 @@
 
 <div class="container">
 
+    <form id="pager-form" action="{{ path('cart_categories') }}">
     <div class="row">
-        <div class="col-md-12">
-            <div class="row carousel-holder">
-
-                <div class="col-md-12">
-                    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="item active">
-                                <img class="slide-image" src="{{ asset('bundles/mobilecartfrontend/images/800x300.gif') }}" alt="">
-                            </div>
-                            <div class="item">
-                                <img class="slide-image" src="{{ asset('bundles/mobilecartfrontend/images/800x300.gif') }}" alt="">
-                            </div>
-                            <div class="item">
-                                <img class="slide-image" src="{{ asset('bundles/mobilecartfrontend/images/800x300.gif') }}" alt="">
-                            </div>
-                        </div>
-                        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                            <span class="glyphicon glyphicon-chevron-left"></span>
-                        </a>
-                        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                            <span class="glyphicon glyphicon-chevron-right"></span>
-                        </a>
-                    </div>
-                </div>
+        <div class="col-sm-6 brand-logo">
+            <i class="fa fa-shopping-cart fa-5x pull-left"></i>
+            <h1>Mobile Cart</h1>
+        </div>
+        <div class="col-sm-6 search-bar">
+            <div class="search-bar-links">
+                <a href="{{ path('cart_view') }}">Cart</a> | <a href="{{ path('cart_checkout') }}">Checkout</a>
+            </div>
+            <div id="scrollable-dropdown-menu" class="input-group">
+                {% if search.query|length > 0 %}
+                    <span class="input-group-btn">
+                <button class="btn btn-default search-clear" type="button">
+                    <i class="glyphicon glyphicon-remove"></i>
+                </button>
+            </span>
+                {% endif %}
+                <input type="text" data-provide="typeahead" autocomplete="off" id="text-search" class="form-control search-query typeahead" name="{{ search.queryparam }}" value="{{ search.query }}" placeholder="Search..." />
+            <span class="input-group-btn">
+                <button class="btn btn-default search-submit" type="button">
+                    <i class="fa fa-search"></i>
+                </button>
+            </span>
             </div>
         </div>
     </div>
 
-    <form id="pager-form" action="{{ path('cart_categories') }}">
+    <div class="row carousel-holder">
+        <div class="col-sm-12">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img class="slide-image" src="{{ asset('bundles/mobilecartfrontend/images/800x300.gif') }}" alt="">
+                    </div>
+                    <div class="item">
+                        <img class="slide-image" src="{{ asset('bundles/mobilecartfrontend/images/800x300.gif') }}" alt="">
+                    </div>
+                    <div class="item">
+                        <img class="slide-image" src="{{ asset('bundles/mobilecartfrontend/images/800x300.gif') }}" alt="">
+                    </div>
+                </div>
+                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                </a>
+                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                </a>
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-sm-12">
             <div class="input-group">
@@ -85,35 +106,32 @@
         {% endfor %}
     </div>
     </form>
-    <div class="row">
+    <div class="row category-list">
 
-        <div class="col-sm-12 category-list">
+    {% if result.entities is defined and not isSpaEnabled() %}
+        {% for entity in result.entities %}
+            <div class="col-sm-4 col-lg-4 col-md-4">
+                <div class="thumbnail">
+                    <a href="{{ path('cart_category_products', { 'slug': entity.slug }) }}">
+                        <img src="{{ asset(imagePath('category', entity, 'list_grid')) }}" alt="">
+                    </a>
 
-        {% if result.entities is defined and not isSpaEnabled() %}
-            {% for entity in result.entities %}
-                <div class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="thumbnail">
-                        <a href="{{ path('cart_category_products', { 'slug': entity.slug }) }}">
-                            <img src="{{ asset(imagePath('category', entity, 'list_grid')) }}" alt="">
-                        </a>
-
-                        <div class="caption">
-                            <h4><a href="{{ path('cart_category_products', { 'slug': entity.slug }) }}">{{ entity.name }}</a></h4>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <a href="{{ path('cart_categories', { 'parent_category_id': entity.id }) }}" class="btn btn-primary pull-left">Categories</a>
-                                <a href="{{ path('cart_category_products', { 'slug': entity.slug }) }}" class="btn btn-primary pull-right">Products</a>
-                            </div>
-                        </div>
-
+                    <div class="caption">
+                        <h4><a href="{{ path('cart_category_products', { 'slug': entity.slug }) }}">{{ entity.name }}</a></h4>
                     </div>
-                </div>
-            {% endfor %}
-        {% endif %}
 
-        </div>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <a href="{{ path('cart_categories', { 'parent_category_id': entity.id }) }}" class="btn btn-primary pull-left">Categories</a>
+                            <a href="{{ path('cart_category_products', { 'slug': entity.slug }) }}" class="btn btn-primary pull-right">Products</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        {% endfor %}
+    {% endif %}
+
     </div><!-- /row -->
 
     <div class="row sorting-bottom pager-bottom">
