--- a/Resources/views/Checkout/totals_discounts.html.twig
+++ b/Resources/views/Checkout/totals_discounts.html.twig
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container totals-discounts-container">
     <div class="row">
         <div class="col-sm-12 form-group">
             <table class="table table-striped table-bordered table-hover">
