--- a/Resources/views/Category/index.html.twig
+++ b/Resources/views/Category/index.html.twig
@@ -4,107 +4,92 @@
 
 {% block content %}
 
-{#% if result.searchQuery is defined %}
-    <div><pre>{{ result.searchQuery }}</pre></div>
-{% endif %}
-{% if result.facetQuery is defined %}
-    <div><pre>{{ result.facetQuery }}</pre></div>
-{% endif %#}
-
 <div class="container">
 
     <form id="pager-form" action="{{ path('cart_categories') }}">
-    <div class="row">
-        <div class="col-sm-6 brand-logo">
-            <i class="fa fa-shopping-cart fa-5x pull-left"></i>
-            <h1>Mobile Cart</h1>
-        </div>
-        <div class="col-sm-6 search-bar">
-            <div class="search-bar-links">
-                <a href="{{ path('cart_view') }}">Cart</a> | <a href="{{ path('cart_checkout') }}">Checkout</a>
-            </div>
-            <div id="scrollable-dropdown-menu" class="input-group">
-                {% if search.query|length > 0 %}
-                    <span class="input-group-btn">
-                <button class="btn btn-default search-clear" type="button">
-                    <i class="glyphicon glyphicon-remove"></i>
-                </button>
-            </span>
-                {% endif %}
-                <input type="text" data-provide="typeahead" autocomplete="off" id="text-search" class="form-control search-query typeahead" name="{{ search.queryparam }}" value="{{ search.query }}" placeholder="Search..." />
-            <span class="input-group-btn">
-                <button class="btn btn-default search-submit" type="button">
-                    <i class="fa fa-search"></i>
-                </button>
-            </span>
-            </div>
-        </div>
-    </div>
+        {% include templatePath('Shared:header-bar.html.twig') %}
 
-    <div class="row carousel-holder">
-        <div class="col-sm-12">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img class="slide-image" src="{{ asset('bundles/mobilecartfrontend/images/800x300.gif') }}" alt="">
+        <div class="row carousel-holder">
+            <div class="col-sm-12">
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img class="slide-image" src="{{ asset('bundles/mobilecartfrontend/images/800x300.gif') }}" alt="">
+                        </div>
+                        <div class="item">
+                            <img class="slide-image" src="{{ asset('bundles/mobilecartfrontend/images/800x300.gif') }}" alt="">
+                        </div>
+                        <div class="item">
+                            <img class="slide-image" src="{{ asset('bundles/mobilecartfrontend/images/800x300.gif') }}" alt="">
+                        </div>
                     </div>
-                    <div class="item">
-                        <img class="slide-image" src="{{ asset('bundles/mobilecartfrontend/images/800x300.gif') }}" alt="">
-                    </div>
-                    <div class="item">
-                        <img class="slide-image" src="{{ asset('bundles/mobilecartfrontend/images/800x300.gif') }}" alt="">
+                    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </a>
+                    <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        {% if result.entities is defined and result.entities|length > 0 %}
+
+            <div class="row sorting pager">
+                <div class="col-sm-12">
+                    <div class="pull-right btn-group input-group pager" role="group">
+                        <button class="btn pull-left btn-default dropdown-toggle" type="button" id="sort-by-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            Sort
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="sort-by-dropdown">
+                            {% for sortable in sortable('category') %}
+                                <li class="navbar-dropdown">
+                                    <a href="#" class="sort-by-input">
+                                        <input type="radio" name="sort" data-dir="{{ sortable.dir }}" class="sort-by" value="{{ sortable.value }}" {% if sortable.active %} checked="checked"{% endif %} />
+                                        {{ sortable.label }}
+                                    </a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                        <button type="button" class="btn pull-left btn-default prev {% if search.page <= 1 %}disabled{% endif %}" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </button>
+                        <input type="number" id="page" class="form-control number" name="{{ search.pageParam }}" value="{{ search.page }}" />
+                        <button type="button" class="btn pull-right btn-default next {% if search.page >= result.pages %}disabled{% endif %}" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </button>
                     </div>
                 </div>
-                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                </a>
-                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                </a>
+                <input type="hidden" name="direction" id="sort-dir" value="{{ sortDir() }}" />
+                {% for filterCode, filterValue in search.facetFilters %}
+                    <input type="hidden" name="{{ filterCode }}" value="{{ filterValue }}" />
+                {% endfor %}
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-12">
-            <div class="input-group">
-                <input type="text" class="form-control search-query" name="{{ search.queryparam }}" value="{{ search.query }}" placeholder="Search..." />
+
+        {% else %}
+
+            <div class="row">
+                <div class="col-sm-12">
+                    <label>No products ? Try Searching Again</label>
+                    <div class="input-group">
+                        <input type="text" class="form-control search-query" name="{{ search.queryparam }}" value="{{ search.query }}" placeholder="Search..." />
                 <span class="input-group-btn">
                     <button class="btn btn-default search-submit" type="button">
                         <i class="fa fa-search"></i>
                     </button>
                 </span>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="row sorting pager">
-        <div class="col-sm-12">
-            <div class="">
-                <select name="sort" id="sort-by">
-                    {% for sortable in sortable('category') %}
-                        <option data-dir="{{ sortable.dir }}" value="{{ sortable.value }}"{% if sortable.active %} selected="selected"{% endif %}>{{ sortable.label }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div class="pull-right btn-group input-group" role="group">
-                <button type="button" class="btn pull-left btn-default prev {% if search.page <= 1 %}disabled{% endif %}" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </button>
-                <input type="number" id="page" class="form-control number" name="{{ search.pageParam }}" value="{{ search.page }}" />
-                <button type="button" class="btn pull-right btn-default next {% if search.page >= result.pages %}disabled{% endif %}" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </button>
-            </div>
-        </div>
-        <input type="hidden" name="direction" id="sort-dir" value="{{ sortDir() }}" />
-        {% for filterCode, filterValue in search.facetFilters %}
-            <input type="hidden" name="{{ filterCode }}" value="{{ filterValue }}" />
-        {% endfor %}
-    </div>
+
+        {% endif %}
+
     </form>
     <div class="row category-list">
 
@@ -231,6 +216,34 @@
                     pagerForm.submit();
                 }
             });
+
+            var searchURL = "{{ path('cart_products') }}" + "?format=json&q=%QUERY";
+            var engine = new Bloodhound({
+                remote: {
+                    url: searchURL,
+                    wildcard: '%QUERY',
+                    transform: function(response) {
+                        return response.result.entities;
+                    }
+                },
+                identify: function(obj) {
+                    return obj.id;
+                },
+                queryTokenizer: Bloodhound.tokenizers.whitespace,
+                datumTokenizer: Bloodhound.tokenizers.whitespace
+            });
+
+            $('input.typeahead').typeahead({
+                        minLength: 2,
+                        highlight: true
+                    },
+                    {
+                        name: 'products',
+                        display: 'name',
+                        displayKey: 'name',
+                        source: engine
+                    }
+            );
         });
     </script>
 
