--- a/Resources/views/Product/index.html.twig
+++ b/Resources/views/Product/index.html.twig
@@ -6,138 +6,133 @@
 
 <div class="container">
     <form id="pager-form" action="{{ path('cart_products') }}">
-    <div class="row">
-        <div class="col-sm-6 brand-logo">
-            <i class="fa fa-shopping-cart fa-5x pull-left"></i>
-            <h1>Mobile Cart</h1>
-        </div>
-        <div class="col-sm-6 search-bar">
-            <div class="search-bar-links">
-                <a href="{{ path('cart_view') }}">Cart</a> | <a href="{{ path('cart_checkout') }}">Checkout</a>
-            </div>
-            <div id="scrollable-dropdown-menu" class="input-group">
-                {% if search.query|length > 0 %}
-                    <span class="input-group-btn">
-                    <button class="btn btn-default search-clear" type="button">
-                        <i class="glyphicon glyphicon-remove"></i>
-                    </button>
-                </span>
+        {% include templatePath('Shared:header-bar.html.twig') %}
+
+        {% if result.total > 0 %}
+        <div class="row">
+            <div class="col-sm-12">
+                {% include templatePath('Product:facet-list-horizontal.html.twig') with result %}
+
+                {% if result.facetFilters is defined and result.facetFilters|length > 0 and not isSpaEnabled() %}
+                    <div class="dropdown pull-right facet-nav">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="facet-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            Active
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="facet-0">
+                            {% for facet in result.facetFilters %}
+                                <li class="navbar-dropdown">
+                                    {% if facet.remove_url is defined and facet.remove_url|length > 0 %}
+                                        <a href="{{ facet.remove_url }}">
+                                            <i class="fa fa-times"></i>
+                                            {{ facet.label }} : {{ facet.term|humanize }}
+                                            {% if facet.count > 0 %} <span class="badge pull-right">{{ facet.count }}</span>{% endif %}
+                                        </a>
+                                    {% endif %}
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
                 {% endif %}
-                <input type="text" data-provide="typeahead" autocomplete="off" id="text-search" class="form-control search-query typeahead" name="{{ search.queryparam }}" value="{{ search.query }}" placeholder="Search..." />
-                <span class="input-group-btn">
-                    <button class="btn btn-default search-submit" type="button">
-                        <i class="fa fa-search"></i>
-                    </button>
-                </span>
             </div>
         </div>
-    </div>
+        {% endif %}
 
-    {% if result.total > 0 %}
-    <div class="row">
-        <div class="col-sm-12">
-            {% include templatePath('Product:facet-list-horizontal.html.twig') with result %}
+        <div class="row carousel-holder">
+            <div class="col-md-12">
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img class="slide-image" src="{{ asset('bundles/mobilecartfrontend/images/800x300.gif') }}" alt="">
+                        </div>
+                        <div class="item">
+                            <img class="slide-image" src="{{ asset('bundles/mobilecartfrontend/images/800x300.gif') }}" alt="">
+                        </div>
+                        <div class="item">
+                            <img class="slide-image" src="{{ asset('bundles/mobilecartfrontend/images/800x300.gif') }}" alt="">
+                        </div>
+                    </div>
+                    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </a>
+                    <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
 
-            {% if result.facetFilters is defined and result.facetFilters|length > 0 and not isSpaEnabled() %}
-                <div class="dropdown pull-right facet-nav">
-                    <button class="btn btn-default dropdown-toggle" type="button" id="facet-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                        Active
+        {% if result.total > 0 %}
+
+        <div class="row">
+            <div class="col-sm-6">
+                <ol class="breadcrumb">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Library</a></li><!-- Products -->
+                    <li class="active">Data</li><!-- Current Category -->
+                </ol>
+            </div>
+            <div class="col-sm-6">
+
+                <div class="pull-right btn-group input-group pager" role="group">
+                    <button class="btn pull-left btn-default dropdown-toggle" type="button" id="sort-by-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                        Sort
                         <span class="caret"></span>
                     </button>
-                    <ul class="dropdown-menu" aria-labelledby="facet-0">
-                        {% for facet in result.facetFilters %}
+                    <ul class="dropdown-menu" aria-labelledby="sort-by-dropdown">
+                        {% for sortable in sortable('product') %}
                             <li class="navbar-dropdown">
-                                {% if facet.remove_url is defined and facet.remove_url|length > 0 %}
-                                    <a href="{{ facet.remove_url }}">
-                                        <i class="fa fa-times"></i>
-                                        {{ facet.label }} : {{ facet.term|humanize }}
-                                        {% if facet.count > 0 %} <span class="badge pull-right">{{ facet.count }}</span>{% endif %}
-                                    </a>
-                                {% endif %}
+                                <a href="#" class="sort-by-input">
+                                    <input type="radio" name="sort" data-dir="{{ sortable.dir }}" class="sort-by" value="{{ sortable.value }}" {% if sortable.active %} checked="checked"{% endif %} />
+                                    {{ sortable.label }}
+                                </a>
                             </li>
                         {% endfor %}
                     </ul>
+                    <button type="button" class="btn pull-left btn-default prev {% if search.page <= 1 %}disabled{% endif %}" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </button>
+                    <input type="number" id="page" class="form-control number" name="{{ search.pageParam }}" value="{{ search.page }}" />
+                    <button type="button" class="btn pull-right btn-default next {% if search.page >= result.pages %}disabled{% endif %}" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </button>
                 </div>
-            {% endif %}
-        </div>
-    </div>
-    {% endif %}
 
-    <div class="row carousel-holder">
-        <div class="col-md-12">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img class="slide-image" src="{{ asset('bundles/mobilecartfrontend/images/800x300.gif') }}" alt="">
-                    </div>
-                    <div class="item">
-                        <img class="slide-image" src="{{ asset('bundles/mobilecartfrontend/images/800x300.gif') }}" alt="">
-                    </div>
-                    <div class="item">
-                        <img class="slide-image" src="{{ asset('bundles/mobilecartfrontend/images/800x300.gif') }}" alt="">
-                    </div>
+                <div class="dropdown pull-right sorting">
+
                 </div>
-                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                </a>
-                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-sm-6">
-            <ol class="breadcrumb">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Library</a></li>
-                <li class="active">Data</li>
-            </ol>
-        </div>
-        <div class="col-sm-6">
-
-            <div class="pull-right btn-group input-group pager" role="group">
-                <button class="btn pull-left btn-default dropdown-toggle" type="button" id="sort-by-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                    Sort
-                    <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="sort-by-dropdown">
-                    {% for sortable in sortable('product') %}
-                        <li class="navbar-dropdown">
-                            <a href="#" class="sort-by-input">
-                                <input type="radio" name="sort" data-dir="{{ sortable.dir }}" class="sort-by" value="{{ sortable.value }}" {% if sortable.active %} checked="checked"{% endif %} />
-                                {{ sortable.label }}
-                            </a>
-                        </li>
-                    {% endfor %}
-                </ul>
-                <button type="button" class="btn pull-left btn-default prev {% if search.page <= 1 %}disabled{% endif %}" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </button>
-                <input type="number" id="page" class="form-control number" name="{{ search.pageParam }}" value="{{ search.page }}" />
-                <button type="button" class="btn pull-right btn-default next {% if search.page >= result.pages %}disabled{% endif %}" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </button>
-            </div>
-
-            <div class="dropdown pull-right sorting">
 
             </div>
 
+            <input type="hidden" name="direction" id="sort-dir" value="{{ sortDir() }}" />
+            {% for filterCode, filterValue in search.facetFilters %}
+                <input type="hidden" name="{{ filterCode }}" value="{{ filterValue }}" />
+            {% endfor %}
+
         </div>
 
-        <input type="hidden" name="direction" id="sort-dir" value="{{ sortDir() }}" />
-        {% for filterCode, filterValue in search.facetFilters %}
-            <input type="hidden" name="{{ filterCode }}" value="{{ filterValue }}" />
-        {% endfor %}
+        {% else %}
 
-    </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <label>No products ? Try Searching Again</label>
+                <div class="input-group">
+                    <input type="text" class="form-control search-query" name="{{ search.queryparam }}" value="{{ search.query }}" placeholder="Search..." />
+            <span class="input-group-btn">
+                <button class="btn btn-default search-submit" type="button">
+                    <i class="fa fa-search"></i>
+                </button>
+            </span>
+                </div>
+            </div>
+        </div>
+
+        {% endif %}
 
     </form>
     {% if result.total > 0 %}
@@ -179,13 +174,6 @@
                 </div>
             {% endfor %}
         {% endif %}
-    </div>
-    {% else %}
-
-    <div class="row">
-        <div class="col-xs-12">
-            <p>Empty Search Results</p>
-        </div>
     </div>
 
     {% endif %}
