--- a/Resources/views/Customer/orders.html.twig
+++ b/Resources/views/Customer/orders.html.twig
@@ -41,7 +41,7 @@
                         {% endfor %}
                     </table>
                     {% else %}
-
+                    <p>No Orders in History</p>
                     {% endif %}
                 </div>
             </div>
