--- a/Resources/views/Email/register_confirm.html.twig
+++ b/Resources/views/Email/register_confirm.html.twig
@@ -2,6 +2,6 @@
 
 {% block content %}
 <p>Hello {{ first_name }} {{ last_name }},</p>
-<p>Thank you for registering.</p>
+<p>Thank you again for being a customer.</p>
 <p>Please click this link to confirm your account: <a href="{{ url }}">{{ url }}</a> .</p>
 {% endblock %}
