--- a/Resources/views/Customer/profile.html.twig
+++ b/Resources/views/Customer/profile.html.twig
@@ -24,7 +24,7 @@
 
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h2 class="panel-title">Customer Profile</h2>
+                    <h2 class="panel-title">Customer Account</h2>
                 </div>
                 <div class="panel-body">
                     <ul class="nav nav-tabs">
