--- a/Resources/views/Product/view.html.twig
+++ b/Resources/views/Product/view.html.twig
@@ -96,6 +96,11 @@
                                 });
 
                                 $('form.add-to-cart').submit(function(e){
+
+                                    if (productConfig['config_values'].length == 0) {
+                                        return true;
+                                    }
+
                                     var isOk = false;
                                     var simples = [];
                                     var i = 0;
@@ -171,51 +176,8 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6 col-sm-12">
-            <div class="row">
-                <div class="col-xs-12 col-sm-6">
-                    <h3>{{ entity.name }}</h3>
-                </div>
-                <div class="col-xs-12 col-sm-6">
-                    <h3 class="pull-right">{{ decorate(entity.price) }}</h3>
-                </div>
-            </div>
-            <form method="post" class="add-to-cart" action="{{ path('cart_add_item', {'id': entity.id}) }}">
-                {% if entity.type == 2 %}
-                    <input type="hidden" id="simple_id" name="simple_id" value="" />
-                {% endif %}
-
-                {% if config_data.config_values is defined %}
-                    {% for option in config_data.config_values %}
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <label for="{{ option.var_code }}">{{ option.label }}</label>
-                                <select class="config-option form-control" name="{{ option.var_code }}">
-                                    {% for option_value in option.product_values %}
-                                        <option value="{{ option_value.value }}">{{ option_value.value }}</option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-                        </div>
-                    {% endfor %}
-                {% endif %}
-
-                <div class="row cart-buttons">
-                    <div class="col-xs-12">
-                        {% if entity.getIsInStock() %}
-                            <button type="submit" class="btn-lg btn-primary addtocart pull-right"><i class="fa fa-shopping-cart"> </i>&nbsp;Add to Cart</button>
-                        {% elseif entity.canBackorder() %}
-                            <button type="submit" class="btn btn-primary addtocart pull-right">Backorder</button>
-                        {% else %}
-                            <p>Currently Unavailable</p>
-                        {% endif %}
-                        <input type="hidden" name="qty" value="1" />
-                    </div>
-                </div>
-            </form>
-        </div>
         <div class="col-sm-12 col-md-6 product-tabs">
-
+            <h1>{{ entity.name }}</h1>
             <ul class="nav nav-tabs">
                 <li class="active">
                     <a href="#general" data-toggle="tab" aria-expanded="true">General</a>
@@ -226,10 +188,54 @@
             </ul>
             <div class="tab-content">
                 <div id="general" class="tab-pane fade active in">
-                    <p>{{ entity.content }}</p>
+                    <p>{{ entity.content|raw }}</p>
                 </div>
                 <div id="misc" class="tab-pane">
-                    <p>misc stuff bla bla</p>
+                    <p>put more custom information here</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 col-sm-12">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h2 class="pull-right">{{ decorate(entity.price) }}</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <form method="post" class="add-to-cart" action="{{ path('cart_add_item', {'id': entity.id}) }}">
+                        {% if entity.type == 2 %}
+                            <input type="hidden" id="simple_id" name="simple_id" value="" />
+                        {% endif %}
+
+                        {% if config_data.config_values is defined %}
+                            {% for option in config_data.config_values %}
+                                <div class="row">
+                                    <div class="col-xs-12">
+                                        <label for="{{ option.var_code }}">{{ option.label }}</label>
+                                        <select class="config-option form-control" name="{{ option.var_code }}">
+                                            {% for option_value in option.product_values %}
+                                                <option value="{{ option_value.value }}">{{ option_value.value }}</option>
+                                            {% endfor %}
+                                        </select>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+
+                        <div class="cart-buttons pull-right">
+
+                            {% if entity.getIsInStock() %}
+                                <button type="submit" class="btn-lg btn-primary addtocart pull-right"><i class="fa fa-shopping-cart"> </i>&nbsp;Add to Cart</button>
+                            {% elseif entity.canBackorder() %}
+                                <button type="submit" class="btn btn-primary addtocart pull-right">Backorder</button>
+                            {% else %}
+                                <p>Currently Unavailable</p>
+                            {% endif %}
+                            <input type="hidden" name="qty" value="1" />
+
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
