--- a/Resources/views/frontend-layout.html.twig
+++ b/Resources/views/frontend-layout.html.twig
@@ -26,133 +26,6 @@
 
     <!-- add your own js here to further populate App -->
 
-    {% if isSpaEnabled() %}
-
-    <script src="{{ asset('bundles/mobilecartfrontend/js/backbone-min.js') }}"></script>
-    <script src="{{ asset('bundles/mobilecartfrontend/js/backbone.localStorage.js') }}"></script>
-    <script src="{{ asset('bundles/mobilecartfrontend/js/backbone.paginator.min.js') }}"></script>
-
-    <script type="text/html" id="paginationTemplate">
-        <% if (currentPage != 1) { %>
-        <button class="prev btn-default btn">Prev</button>
-        <% } %>
-        <div class="btn-group">
-            <button data-toggle="dropdown" class="btn btn-default dropdown-toggle">Page <%= currentPage %> <span class="caret"></span></button>
-            <ul class="dropdown-menu">
-                <% for(p=1;p<=totalPages;p++){ %>
-                <% if (currentPage == p) { %>
-                <li class="active"><a href="#" class="page"><%= p %></a></li>
-                <% } else { %>
-                <li><a href="#" class="page"><%= p %></a></li>
-                <% } %>
-                <% }%>
-            </ul>
-        </div>
-        <% if (lastPage != currentPage && lastPage != 0) { %>
-        <button class="btn btn-default next">Next</button>
-        <% } %>
-    </script>
-
-    <script type="text/html" id="sortingTemplate">
-        <div class="btn-group">
-            <button data-toggle="dropdown" class="btn btn-default dropdown-toggle">Sort by <strong><span id="sortByText">popularity</span></strong> <span class="caret"></span></button>
-            <ul class="dropdown-menu sort-by">
-                <li><a href="date">Date</a></li>
-                <li><a href="name">Name</a></li>
-                <li><a href="popularity">Popularity</a></li>
-            </ul>
-        </div>
-    </script>
-
-    <script type="text/template" id="facetLabel">
-        <a href="#" class="facet-label"><%- label %><i class="fa fa-arrow"></i></a>
-    </script>
-
-    <script type="text/template" id="active-facet-link">
-        <% if (typeof(remove_url) != "undefined" && remove_url.length > 0) { %>
-        <a href="<%- remove_url %>" class="facet-remove-link">
-            <i class="fa fa-times"></i>
-            <%- label %> : <%- term %>
-            <span class="badge pull-right"><%- count %></span>
-        </a>
-        <% } %>
-    </script>
-
-    <script type="text/template" id="facetLink">
-        <% if (typeof(remove_url) != "undefined" && remove_url.length > 0) { %>
-        <a href="<%- remove_url %>" class="facet-remove-link">
-            <i class="fa fa-times"></i>
-            <%- term %>
-            <span class="badge pull-right"><%- count %></span>
-        </a>
-        <% } else { %>
-        <a href="<%- url %>" class="facet-link"><%- term %>
-            <span class="badge pull-right"><%- count %></span>
-        </a>
-        <% } %>
-    </script>
-
-    <script type="text/template" id="cart-total">
-        <div class="row">
-            <div class="col-xs-6"><%- label %></div>
-            <div class="col-xs-6"><%- value %></div>
-        </div>
-    </script>
-
-    <!-- todo: pass url as parameter -->
-    <script type="text/template" id="cart-item">
-        <div class="row">
-            <div class="col-xs-8">
-                <a href="/<%- slug %>"><%- name %></a>
-            </div>
-            <div class="col-xs-4"><%- qty %> x <%- price %></div>
-        </div>
-    </script>
-
-    <script type="text/template" id="cart-buttons">
-        <div class="row">
-            <div class="col-xs-6">
-                <a class="btn btn-default" href="/cart/view">View Cart</a>
-            </div>
-            <div class="col-xs-6">
-                <a class="btn btn-success" href="/cart/checkout">Checkout</a>
-            </div>
-        </div>
-    </script>
-
-    <script type="text/template" id="product-grid-single">
-
-        <div class="thumbnail">
-            <a href="/<%- slug %>"><img alt="" src="/bundles/mobilecartfrontend/images/320x150.gif"></a>
-            <div class="caption">
-                <h4><a href="/<%- slug %>"><%- name %></a></h4>
-                <h4>$<%- price %></h4>
-                <p></p>
-            </div>
-
-            <div class="row">
-                <div class="col-xs-6">
-                    <div class="ratings">
-                        <p>15 Reviews<br>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                        </p>
-                    </div>
-                </div>
-                <div class="col-xs-6">
-                    <a href="/cart/add/<%- id %>" rel="nofollow" class="btn btn-primary addtocart">Add to Cart</a>
-                </div>
-            </div>
-        </div>
-
-    </script>
-
-    {% endif %}
-
-
 {% endblock %}
 
 {% block body %}
@@ -227,9 +100,12 @@
                         </li>
                         -->
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account <b class="caret"></b></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"> </i> <b class="caret"></b></a>
                             <ul class="pull-right dropdown-menu">
-                                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                                {% if is_granted('ROLE_ADMIN') %}
+                                    <li><a href="{{ path('cart_admin_dashboard') }}">Admin Panel</a></li>
+                                    <li><a href="{{ path('logout') }}">Logout</a></li>
+                                {% elseif is_granted('IS_AUTHENTICATED_FULLY') %}
                                     <li><a href="{{ path('customer_profile') }}">Profile</a></li>
                                     <li><a href="{{ path('logout') }}">Logout</a></li>
                                 {% else %}
@@ -247,10 +123,7 @@
 </header>
 
 {% endblock %}
-{% block sidebar %}
-
-{% endblock %}
-{% block content_wrapper %}
+{% block alerts %}
 
     <div class="container">
         <div class="row alerts">
@@ -269,10 +142,18 @@
         </div>
     </div>
 
+{% endblock %}
+
+{% block sidebar %}
+
+{% endblock %}
+
+{% block content_wrapper %}
     {% block content %}
 
     {% endblock %}
 {% endblock %}
+
 {% block footer %}
 
     <hr>
