add sku to product view page

--- a/Resources/views/Product/view.html.twig
+++ b/Resources/views/Product/view.html.twig
@@ -191,7 +191,9 @@
                     <p>{{ entity.content|raw }}</p>
                 </div>
                 <div id="misc" class="tab-pane">
-                    <p>put more custom information here</p>
+                    <ul>
+                        <li>SKU: {{ entity.sku }}</li>
+                    </ul>
                 </div>
             </div>
         </div>
