--- a/Resources/views/Checkout/success.html.twig
+++ b/Resources/views/Checkout/success.html.twig
@@ -9,34 +9,6 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-6">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Billing Address</h3>
-                </div>
-                <div class="panel-body">
-                    <div>{{ order.billingname }}</div>
-                    <div>{{ order.billingstreet }}</div>
-                    <div>{{ order.billingcity }}, {{ order.billingregion }} {{ order.billingpostcode }}</div>
-                    <div>{{ order.billingcountryid }}</div>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Shipping Address</h3>
-                </div>
-                <div class="panel-body">
-                    <div>{{ order.shippingname }}</div>
-                    <div>{{ order.shippingstreet }}</div>
-                    <div>{{ order.shippingcity }}, {{ order.shippingregion }} {{ order.shippingpostcode }}</div>
-                    <div>{{ order.shippingcountryid }}</div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
         <div class="col-sm-12 form-group">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -66,6 +38,53 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Billing Address</h3>
+                </div>
+                <div class="panel-body">
+                    <div>{{ order.billingname }}</div>
+                    <div>{{ order.billingstreet }}</div>
+                    <div>{{ order.billingcity }}, {{ order.billingregion }} {{ order.billingpostcode }}</div>
+                    <div>{{ order.billingcountryid }}</div>
+                </div>
+            </div>
+        </div>
+        {% if order.shipments|length > 0 %}
+        <div class="col-sm-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Shipments</h3>
+                </div>
+                <div class="panel-body">
+                    <table class="table table-striped table-bordered table-hover">
+                        <thead>
+                        <tr>
+                            <th>Address</th>
+                            <th>Service</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for shipment in order.shipments %}
+                            <tr>
+                                <td>
+                                    {{ shipment.name }}
+                                    <br>{{ shipment.street }}
+                                    <br>{{ shipment.city }}, {{ shipment.region }} {{ shipment.postcode }}
+                                    <br>{{ shipment.countryid }}
+                                </td>
+                                <td>{{ shipment.company }} {{ shipment.method }} {{ decorate(shipment.price) }}</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        {% endif %}
     </div>
 
 </div>
