--- a/Resources/views/Checkout/totals_discounts.html.twig
+++ b/Resources/views/Checkout/totals_discounts.html.twig
@@ -9,6 +9,9 @@
                         <th>Sku</th>
                         <th>Price</th>
                         <th>Qty</th>
+                        {% if is_shipping_enabled and is_multi_shipping_enabled %}
+                        <th>Address</th>
+                        {% endif %}
                     </tr>
                 </thead>
                 <tbody>
@@ -18,6 +21,15 @@
                         <td>{{ cart_item.sku }}</td>
                         <td>{{ decorate(cart_item.price) }}</td>
                         <td><input class="form-control qty-input" type="number" name="qty[{{ cart_item.product_id }}]" value="{{ cart_item.qty }}" /></td>
+                        {% if is_shipping_enabled and is_multi_shipping_enabled and customerAddresses()|length > 1 %}
+                            <td>
+                                <select name="product_address[{{ cart_item.product_id }}]" class="form-control product-shipping">
+                                    {% for address in customerAddresses() %}
+                                        <option value="{{ address.id }}"{% if cart_item.get('customer_address_id') == address.id %} selected="selected"{% endif %}>{{ address.label }}</option>
+                                    {% endfor %}
+                                </select>
+                            </td>
+                        {% endif %}
                     </tr>
                 {% endfor %}
                 </tbody>
@@ -28,24 +40,50 @@
     <div class="row">
         <div class="col-sm-6">
 
-        {% if is_shipping_enabled and cartShippingMethods() | length > 0 %}
+        {% if is_shipping_enabled %}
+
             <table class="table table-striped table-bordered table-hover">
                 <thead>
-                    <tr>
-                        <th colspan="2">Shipping Methods</th>
-                    </tr>
+                <tr>
+                    <th colspan="2">Shipping Methods</th>
+                </tr>
                 </thead>
                 <tbody>
-                {% for method in cartShippingMethods() %}
+
+            {% if is_multi_shipping_enabled %}
+                {% for address_id, methods in cartShippingMethods('') %}
+
                     <tr>
+                        <td>{{ addressLabel(address_id) }}</td>
                         <td class="text-center">
-                            <input type="radio" name="shipping_method" value="{{ method.code }}" {% if cartHasShipmentMethodCode(method.code) %}checked="checked"{% endif %} />
+                            <select name="shipping_methods[{{ address_id }}]" class="form-control multi-shipping">
+                                {% for method in methods %}
+                                    <option value="{{ method.code }}"{% if cartHasShipmentMethodCode(method.code, address_id) %} selected="selected"{% endif %}>{{ method.company }} {{ method.method }}  {{ decorate(method.price) }}</option>
+                                {% endfor %}
+                            </select>
                         </td>
-                        <td>{{ method.company }} {{ method.method }}  {{ decorate(method.price) }}</td>
                     </tr>
+
                 {% endfor %}
+            {% else %}
+
+                    <tr>
+                        <td>Main Shipping Address</td>
+                        <td class="text-center">
+                            <select name="shipping_method" class="form-control">
+                                {% for method in cartShippingMethods() %}
+                                    <option value="{{ method.code }}"{% if cartHasShipmentMethodCode(method.code) %} selected="selected"{% endif %}>{{ method.company }} {{ method.method }}  {{ decorate(method.price) }}</option>
+                                {% endfor %}
+                            </select>
+                        </td>
+                    </tr>
+
+            {% endif %}
+
                 </tbody>
+
             </table>
+
         {% endif %}
 
             <div>
